# sharekit

./: .gitguardian.yaml  .snyk  CHANGELOG.md  README.md  SECURITY.md  package-lock.json  package.json
.claude/backlog/: 2026-06-23-1.md  2026-06-23.md
.github/workflows/: ci.yml  release.yml
docs/: index.html
docs/adr/: 0001-rebase-stale-feature-prs-onto-main.md  0002-toml-parser-dependency.md  0003-profile-composition.md
docs/decisions/: 0001-profile-versioning.md
docs/distribution/: homebrew-formula.rb
sharekit-pip/: pyproject.toml
sharekit-pip/sharekit/: __init__.py  __main__.py  install.py  platform.py
sharekit-profile/.claude/: CLAUDE.md
sharekit-profile/.claude/agents/: architect.md  backlog-manager.md  ci-fixer.md  critic.md  decision-critic.md  deep-auditor.md  handoff-writer.md  issue-triager.md  mcp-tool-dev.md  overengineering-auditor.md  phase-runner.md  pr-reviewer.md  rag-evaluator.md  refactor-orchestrator.md  research-decider.md  skill-eval-reviewer.md
sharekit-profile/.claude/hooks/: README.md  (+14 more)
src/: backup.ts  commands.ts  fetch.ts  index.ts  paths.ts  plan.ts  scanner.ts  sharekit.ts  state.ts
src/commands/: apply.ts  install.ts  preview.ts  rollback.ts
src/lib/: backup.ts  diff.ts  fetch.ts  profile.ts
test/: backup-security.test.ts  cli.test.ts  correctness.test.ts  coverage.test.ts  fetch.test.ts  helpers.test.ts  init.test.ts  inspect.test.ts  integration.test.ts  paths.test.ts  plan.test.ts  ref.test.ts  robustness-fixes.test.ts  rollback.test.ts  scan.test.ts  search.test.ts  walk.test.ts  windows-paths.test.ts
(+502 files in other folders)
